# ADMITWISE-AI-Final-

./: .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  test-agent.ts
apps/data-pipeline/: README.md  pyproject.toml
apps/data-pipeline/app/: __init__.py  cli.py  main.py
apps/data-pipeline/data/college_data_atal_bihari_vajpayee_indian_institute_of_information_technology_and_management_gwalior/: branches.csv  campus_reality.json  clubs.csv  college_profile.json  college_summary.md  cutoffs.csv  data_conflicts.csv  excluded_sources.md  fees.csv  import_readiness.json  location.csv  manual_verification_checklist.md  placements.csv  recruiters.csv  research_log.md  scholarships.csv  sources.csv  student_experience_sources.csv  validation_manifest.json
apps/data-pipeline/data/college_data_bits_pilani_goa_campus/: branches.csv  campus_reality.json  clubs.csv  college_profile.json  college_summary.md  cutoffs.csv  data_conflicts.csv  excluded_sources.md  fees.csv  import_readiness.json  location.csv  manual_verification_checklist.md  placements.csv  (+5 more)
apps/data-pipeline/extractors/: __init__.py  common.py  csv_excel.py  dispatcher.py  pdf.py  webpage.py
apps/data-pipeline/normalizers/: __init__.py  qualitative.py  qualitative_validation.py  records.py  validation.py
apps/data-pipeline/schemas/: __init__.py  extraction.py
apps/data-pipeline/scripts/: bulk_import.py  import_josaa_cutoffs.py  import_scholarships.py
apps/data-pipeline/services/: __init__.py  ingestion.py  staging.py
apps/data-pipeline/tests/: test_ingestion.py
(+771 files in other folders)
